frontend/test/should_fail/inh_attrib_016.grg
using inh_attrib_model_016;

rule r {

	replace {
	}
}

